[Swagger] Added limit
