# swagger.json
@@ -989,11 +989,20 @@
             }
           }
         }
-      },
+      }
+    },
+    "/pedido/{numReg}":{
       "get": {
         "security": [{ "bearerAuth": [] }],
         "tags": ["Pedido"],
-        "description": "Autenticado como administrador, muestra todos los pedidos del sistema. Autenticado como chef o mesero, muestra los pedidos donde participaron. Autenticado como cliente, muestra los pedidos realizados.",
+        "description": "Autenticado como administrador, muestra todos los pedidos del sistema. Autenticado como chef o mesero, muestra los pedidos donde participaron. Autenticado como cliente, muestra los pedidos realizados. Limitado al número de registros indicado por el usuario",
+        "parameters": [
+          {
+            "name": "numReg",
+            "in": "path",
+            "description": "Número de registros a mostrar."
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
